--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,23 +359,20 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 4px;
   color: #fff;
 }
-
 .why-us .content h3 {
   font-weight: 700;
   font-size: 34px;
   margin-bottom: 30px;
 }
-
 .why-us .content p {
   margin-bottom: 30px;
   text-align: justify;
   font-size: 15px;
 }
-
 .why-us .content .more-btn {
   margin: 20px 0 0 0;
   padding: 10px 20px;
-  border: none;
+  border: 2px solid #f9e506;
   color: white;
   background: linear-gradient(221deg, rgba(2,0,36,1) 0%, rgba(81,176,121,0.8575805322128851) 0%, rgba(15,120,222,0.9164040616246498) 62%);
   border-radius: 50px;
@@ -384,16 +381,14 @@ h1, h2, h3, h4, h5, h6 {
   outline: none;
   font-size: 18px;
 }
-
 .why-us .content .more-btn i {
   font-size: 14px;
 }
-
 .why-us .content .more-btn:hover {
   color: #2d3436;
   box-shadow: inset 300px 0 0 0 #f9e506;
+  border: none;
 }
-
 .why-us .icon-boxes .icon-box {
   text-align: center;
   border-radius: 10px;
@@ -402,24 +397,20 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px 20px;
   width: 100%;
 }
-
 .why-us .icon-boxes .icon-box img {
   width: 80px;
   color: #1977cc;
   margin-bottom: 10px;
   /* margin-top: -35px; */
 }
-
 .why-us .icon-boxes .icon-box h4 {
   font-size: 16px;
   font-weight: 700;
   margin: 0 0 10px 0;
 }
-
 .why-us .icon-boxes .icon-box p {
   font-size: 13px;
   color: #848484;
-  
 }
 
 /*--------------------------------------------------------------
@@ -497,7 +488,15 @@ h1, h2, h3, h4, h5, h6 {
   transition: all ease-in-out 0.3s;
   background: white;
 }
-
+.appointment-box .appointment-info .spacer{
+  height: 2px;
+  background: #f39c12;
+  width: 50px;
+  align-items: center;
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
 .appointment-box {
   transition: 0.3s;
   position: relative;
@@ -508,7 +507,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .appointment-box:before {
   content: "";
-  background: rgba(137, 137, 138, 0.6);
+  /* background: rgba(182, 182, 182, 0.6); */
+  background: linear-gradient(221deg, rgba(2,0,36,1) 0%, rgba(81,176,121,0.13769257703081228) 0%, rgba(28,182,245,0.19931722689075626) 62%);
   position: absolute;
   left: 100%;
   right: 0;
@@ -517,23 +517,17 @@ h1, h2, h3, h4, h5, h6 {
   transition: all ease-in-out 0.3s;
   z-index: 2;
 }
-
 .appointment-box:hover::before {
   left: 0;
 }
-
 .appointment-box:hover .appointment-links {
   opacity: 1;
   top: calc(50% - 16px);
 }
-
 .appointment-box:hover .appointment-info {
   opacity: 1;
   bottom: 0;
 }
-
-
-
 
 /*--------------------------------------------------------------
 # Footer
