--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -472,6 +472,7 @@ h1, h2, h3, h4, h5, h6 {
   color: white;
   padding: 10px 10px;
   border-radius: 20px;
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.5);
 }
 .appointment-box .appointment-links a:hover{
   background: #27ae60;
