--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -535,6 +535,60 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------------------------------------------------
+# Services
+--------------------------------------------------------------*/
+#services{
+  margin-top: 50px;
+  color: #636e72;
+}
+#services h4{
+  color: #27ae60;
+  margin-top: 10px;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+#services .spacer{
+  height: 2px;
+  background: #f39c12;
+  width: 50px;
+  align-items: center;
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+#services .service-img img{
+  width: 90%;
+  margin: auto;
+}
+#services img{
+  width: 120px;
+}
+#services .service-description h5{
+  text-decoration: underline;
+}
+#services .service-description p{
+  text-align: justify;
+  font-size: 15px;
+}
+#services .service-description a{
+  background: linear-gradient(221deg, rgba(2,0,36,1) 0%, rgba(81,176,121,0.8575805322128851) 0%, rgba(15,120,222,0.9164040616246498) 62%);
+  color: white;
+  padding: 10px 30px;
+  border-radius: 20px;
+  box-shadow: inset 0 0 0 0 #f9e506;
+  transition: ease-out 0.3s;
+}
+#services .service-description a:hover{
+  color: #2d3436;
+  box-shadow: inset 300px 0 0 0 #f9e506;
+}
+#services .service-img .bg{
+  background: linear-gradient(221deg, rgba(2,0,36,1) 0%, rgba(81,176,121,0.13769257703081228) 0%, rgba(28,182,245,0.19931722689075626) 62%);
+  border-bottom-right-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+/*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
 #footer {
