--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ html {
 body {
   font-family:'Inter',sans-serif;
   color: #444444;
+  overflow-x: hidden;
 }
 
 a {
@@ -575,17 +576,21 @@ h1, h2, h3, h4, h5, h6 {
   color: white;
   padding: 10px 30px;
   border-radius: 20px;
-  box-shadow: inset 0 0 0 0 #f9e506;
-  transition: ease-out 0.3s;
 }
 #services .service-description a:hover{
-  color: #2d3436;
-  box-shadow: inset 300px 0 0 0 #f9e506;
+  color: white;
+  opacity: 0.8;
 }
 #services .service-img .bg{
   background: linear-gradient(221deg, rgba(2,0,36,1) 0%, rgba(81,176,121,0.13769257703081228) 0%, rgba(28,182,245,0.19931722689075626) 62%);
   border-bottom-right-radius: 20px;
-  border-top-right-radius: 20px;
+  border-top-right-radius: 100px;
+}
+
+#services .service-img .bg1{
+  background: linear-gradient(221deg, rgba(2,0,36,1) 0%, rgba(81,176,121,0.13769257703081228) 0%, rgba(28,182,245,0.19931722689075626) 62%);
+  border-bottom-left-radius: 20px;
+  border-top-left-radius: 100px;
 }
 
 /*--------------------------------------------------------------
