--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -592,6 +592,23 @@ h1, h2, h3, h4, h5, h6 {
   border-bottom-left-radius: 20px;
   border-top-left-radius: 100px;
 }
+#services .service-description .service-box .description{
+  margin-left: 25px;
+  margin-top: -21px;
+}
+#services .service-offer img{
+  width: 80px;
+}
+#services .service-offer h5{
+  margin-left: 90px;
+  margin-top: -75px;
+  text-decoration: underline;
+}
+#services .service-offer p{
+  margin-left: 90px;
+  margin-top: -5px;
+  text-align: justify;
+}
 
 /*--------------------------------------------------------------
 # Footer
