--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,7 +316,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 1.2em;
   width:0%;
   overflow: hidden;
-  animation:t 3s linear infinite alternate, 
+  animation:type 3s linear infinite alternate, 
   blinking-cursor 0.8s infinite;
   animation-fill-mode: forwards
 }
@@ -324,7 +324,7 @@ h1, h2, h3, h4, h5, h6 {
   content:" ";
   display:inline-block;
 }
-@keyframes t{
+@keyframes type{
   90%,100% {width:100%}
 }
 
@@ -390,10 +390,17 @@ h1, h2, h3, h4, h5, h6 {
 .why-us .content h3 {
   font-weight: 700;
   font-size: 34px;
-  margin-bottom: 10px;
+  /* margin-bottom: 15px; */
+}
+.why-us .content .spacer {
+  height: 3px;
+  width: 80px;
+  background: white;
+  margin-bottom: 15px;
+  margin-top: -10px;
 }
 .why-us .content p {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   text-align: justify;
   font-size: 15px;
 }
